Base inventory logic

--- a/modules/BaseInventory/tsconfig.json
+++ b/modules/BaseInventory/tsconfig.json
@@ -10,12 +10,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
     
     "paths": {
-      "engine/*": ["../../engine/js/engine/*"]
+      "engine/*": ["../../engine/js/engine/*"],
+      "coreModule/*": ["../coreModule/js/*"],
     },
     
   },
-  "include": ["./src/**/*", "./mod.ts"],
-  "exclude": ["../../engine/src/*"]
+  "include": ["./src/**/*"]
 }
