--- a/modules/BaseInventory/deno.json
+++ b/modules/BaseInventory/deno.json
@@ -20,6 +20,7 @@
   },
   "imports": {
     "engine/": "./../../engine/src/engine/",
-    "esbuild": "npm:esbuild@^0.24.0"
+    "esbuild": "npm:esbuild@^0.24.0",
+    "coreModule/": "../coreModule/src/"
   }
 }
