Core module base logic

--- a/modules/CoreModule/tsconfig.json
+++ b/modules/CoreModule/tsconfig.json
@@ -10,12 +10,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
     
     "paths": {
       "engine/*": ["../../engine/js/engine/*"]
     },
     
   },
-  "include": ["./src/**/*", "./mod.ts"],
-  "exclude": ["../../engine/src/*"]
+  "include": ["./src/**/*"]
 }
