--- a/engine/deno.json
+++ b/engine/deno.json
@@ -16,13 +16,14 @@
     ]
   },
   "tasks": {
-    "run": "deno run --allow-all ./src/main.ts",
+    "run": "deno run --allow-all --unstable-worker-options ./src/main.ts",
     "build": "deno run --allow-all ./switchExt.ts js && tsc && deno run --allow-all ./switchExt.ts ts",
     "compile": "deno compile --allow-all ./src/main.ts"
   },
   "imports": {
     "@webview/webview": "jsr:@webview/webview@^0.8.1",
     "engine/": "./src/engine/",
+    "misc/": "./src/misc/",
     "esbuild": "npm:esbuild@^0.24.0"
   }
 }
