--- a/modules/PhysicsModule/deno.json
+++ b/modules/PhysicsModule/deno.json
@@ -21,6 +21,7 @@
   },
   "imports": {
     "engine/": "./../../engine/src/engine/",
-    "esbuild": "npm:esbuild@^0.24.0"
+    "esbuild": "npm:esbuild@^0.24.0",
+    "modules/": "./../"
   }
 }
